# fooocus_gradio_api

./: README.md  main.py  pyproject.toml
docs/: automating_fooocus_chat.md  notes.md
src/: config.py  fooocus_client.py  logger.py  models.py  prompts_parser.py
tests/: test_prompts_parser.py
