[project]
name = "fooocus-gradio-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio-client>=1.3.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "pickledb>=0.9.2",
    "toml>=0.10.2",
    "websockets>=12,<13"
]
